# mlops

./: .gitignore  Cargo.toml  README.md  init.sh  setup.sh
1a-customer-churn-prediction-with-xgboost/: main.py  pyproject.toml
1a-customer-churn-prediction-with-xgboost/infra/: .terraform.lock.hcl  locals.tf  main.tf  output.tf  s3.tf  sagemaker.tf  variables.tf  versions.tf
1a-customer-churn-prediction-with-xgboost/notebooks/: churn-prediction-xgboost.ipynb
credit-card-fraud-detection/: .dockerignore  Dockerfile.jupyter  docker-compose.yml  pyproject.toml
credit-card-fraud-detection/.virtual_documents/notebooks/: 01_eda.ipynb
credit-card-fraud-detection/infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
credit-card-fraud-detection/infra/modules/iam/: main.tf  outputs.tf  variables.tf
credit-card-fraud-detection/infra/modules/s3/: locals.tf  main.tf  variables.tf
credit-card-fraud-detection/infra/modules/sagemaker/: locals.tf  main.tf  outputs.tf  variables.tf
credit-card-fraud-detection/notebooks/: 01_eda.ipynb
specs/001-mla-c01-practice-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mla-c01-practice-tool/checklists/: requirements.md
specs/001-mla-c01-practice-tool/contracts/: cli.md
specs/002-exam-domains/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: app.rs  db.rs  lib.rs  main.rs  models.rs
src/data/: default_bank.json
src/ui/: exam.rs  history.rs  menu.rs  mod.rs  practice.rs
tests/: integration.rs
(+1 files in other folders)
