[project]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.14",
    "imbalanced-learn>=0.14.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "sagemaker>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
